# herringbone

./: .gitignore  README.md  actions.py  analysis.ipynb  analysis_mc.ipynb  analysis_td.ipynb  demo.ipynb  demo.py  demo_dp.ipynb  demo_mc.ipynb  demo_td.ipynb  dp_demo.ipynb  dp_demo.py  import_test.py  mc_control_compute_test.py  mc_demo.ipynb  mc_pred_compute_test.py  monte_carlo_demo.py  pyproject.toml  render_demo.py  requirements.txt  td_demo.py  temp_seed_test.py  test.ipynb
docs/: CLASSES.md  CODING_CONVENTIONS.md  CONTRIBUTING.md  algorithms.md  architecture.md  customization.md  pseudo_code_notes.py  roadmap.md
herringbone/: __init__.py
herringbone/env_core/: __init__.py  mdp.py
herringbone/env_core/action_space/: action.py
herringbone/env_core/algorithms/: __init__.py
herringbone/env_core/config/: action_config.json  piece_config.json  state_config.json
herringbone/env_core/episode/: __init__.py  episode.py
herringbone/env_core/maps/: danger_holes.csv  double_fish.csv  example.csv  example2.csv  flappy_bird.csv  gamma.csv  heart.csv  maze.csv  mega.csv  slides.csv  wall_of_death.csv
herringbone/env_core/state_space/: __init__.py  board.py  piece.py  state.py
herringbone/env_core/transition_space/: __init__.py  transition_matrix.py
herringbone/env_core/utils/: __init__.py  actions_loader.py  color.py  config_loader.py  map_loader.py  render.py
herringbone/tests/: _init_algorithms.py
src/env_core/: mdp.py
src/env_core/action_space/: action.py
src/env_core/config/: action_config.json  (+1 more)
src/transition_space/: transition_matrix.py
(+29 files in other folders)
