[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "herringbone"
version = "0.1.0"
description = "Reinforcement Learning Framework"
dependencies = [
    "numpy==2.2.4",
    "torch==2.6.0"
]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
exclude = ["lib", "share", "lib64", "include"]

[tool.setuptools.package-data]
"*" = ["*.*"]
